/*
 * $Id: ChangeLog,v 1.3187 2004/07/22 11:32:08 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-07-22 17:00 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * source/rtl/teditor.prg
    ! Process files with multiple leading empty lines correctly.

2004-07-22 15:40 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * contrib/libct/files.c
    ! Fixed FILEDATE() to return CA-Tools compatible values in DOS/Windows.

2004-07-22 06:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/file.c
    * strchr() casts

2004-07-22 06:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.bc
    + msgplwin.c

2004-07-22 01:39 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/compiler/harbour.sly
    * Enhanced SWITCH construct to support parenthesised constants, as well as +/-/|/& operators

2004-07-22 10:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbrdddbf.h
  * xharbour/source/rdd/dbf1.c
    + SELF_RECINFO() implemented - DBRECINFO() now should work

  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed ORDKENO() which was bugy reported in some cases
      when DESCEND flag was changed by ORDDESCEND()

  * xharbour/source/rdd/dbfdbt/dbfdbt1.c
    ! use hb_cdpnTranslate instead of hb_cdpTranslate

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! last Alexander fix from Harbour for SEEK

  * xharbour/source/rtl/fstemp.c
    * respect _SET_[FILE|DIR]CASE flag in hb_fsCreateTemp()

2004-07-21 20:12 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
   * doc/en/zipnew.txt
     ! fixed text in hb_SetBuffer().  Original text said params correspond to
       read/write/extract but should actually say write/extract/read (refer to
       contrib/hbzlib/zipnew.cpp, hb_SetZipBuff() function).  Other minor
       typo fixes.
