@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3187 2004/07/22 11:32:08 likewolf Exp $
+ * $Id: ChangeLog,v 1.3188 2004/07/22 12:57:34 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-07-22 18:25 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
+  * contrib/libct/range.c
+    ! Fixed RANGEREPL() to return CA-Tools compatible values.
 
 2004-07-22 17:00 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
   * source/rtl/teditor.prg
